--- a/style/style.css
+++ b/style/style.css
@@ -2,10 +2,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+}
+html{
+    width: 100%;
+    height: 100%;
 }
 body{
     width: 100%;
-    background-image: linear-gradient(to right,#0000,#555555,#0c0c0c);
+    background-color: #5993802e;
 }
 header{
     width: 100%;
@@ -13,7 +18,7 @@ header{
 }
 header div h1{
     text-align: center;
-    color: white;
+    color: black;
     line-height: 100px;
 }
 main{
@@ -23,8 +28,8 @@ main{
 }
 main .container{
     width: fit-content;
+    height: 90%;
     margin: 0 auto;
-    background-color: antiquewhite;
     padding: 20px;
     border-radius: 10px;
     /* transform: rotateY(90deg); */
@@ -65,14 +70,14 @@ main .container .time button{
     margin-top: -100px;
     z-index: 7;
     position: absolute;
-    background-color: brown;
+    background-image: linear-gradient(to right,#457e6b82,#59938080,#65a7912a);
     border-radius:10px;
     transition: width 800ms;
 }
 .toggle{
     width: 0px;
 }
-@media(max-width:660px) {
+@media(max-width: 900px) {
     .frontcard{
         width: 70px;
         height: 70px;
@@ -83,5 +88,18 @@ main .container .time button{
         width: 70px;
         height:70px;
         margin-top: -70px;
+    }
+}
+@media(max-width: 400px) {
+    .frontcard{
+        width: 50px;
+        height: 50px;
+        font-size: 20px;
+        line-height: 35px;
+    }
+    .backcard{
+        width: 50px;
+        height:50px;
+        margin-top: -50px;
     }
 }
