--- a/style/style.css
+++ b/style/style.css
@@ -91,7 +91,7 @@ main .container .time button{
         margin-top: -70px;
     }
 }
-@media(max-width: 400px) {
+/* @media(max-width: 400px) {
     .frontcard{
         width: 50px;
         height: 50px;
@@ -103,4 +103,4 @@ main .container .time button{
         height:50px;
         margin-top: -50px;
     }
-}
+} */
