--- a/style/style.css
+++ b/style/style.css
@@ -24,7 +24,10 @@ header div h1{
 main{
     width: 100%;
     height: 85%;
-    position: relative;
+}
+.sub-container{
+    width: fit-content;
+    height: fit-content;
 }
 main .container{
     width: fit-content;
@@ -32,7 +35,9 @@ main .container{
     margin: 0 auto;
     padding: 20px;
     border-radius: 10px;
-    /* transform: rotateY(90deg); */
+    transform: rotateY(90deg);
+    transition: transform 2s;
+    transition-timing-function: linear;
 }
 main .container .time{
     display: flex;
@@ -43,31 +48,28 @@ main .container .time{
     padding: 15px 0;
     
 }
-main .container .time button{
-    padding:0.5rem 2rem;
+main #startbtn{
+    padding:1.5rem 3rem;
     border: none;
     outline: none;
     border-radius: 5px;
     background-color: #a52a2a;
     color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    font-size: 20px;
 }
 .frontcard{
-    width: 100px;
-    height: 100px;
     text-align: center;
     cursor: pointer;
-    font-size: 40px;
-    line-height: 100px;
     background-color: white;
     border-radius:10px;
     transition-duration: 3s;
     transition-timing-function: linear;
-    transform: translate(0px,0px,-5px)
 }
 .backcard{
-    width: 100px;
-    height: 100px;
-    margin-top: -100px;
     z-index: 7;
     position: absolute;
     background-image: linear-gradient(to right,#457e6b,#599380,#65a791);
@@ -75,32 +77,92 @@ main .container .time button{
     transition: width 800ms;
     
 }
-.toggle{
-    width: 0px;
+.finish{
+    /* display: none; */
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top:0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.303);
 }
-@media(max-width: 900px) {
+@media(min-width: 0px){
     .frontcard{
-        width: 70px;
-        height: 70px;
-        font-size: 20px;
-        line-height: 35px;
+        width: 40px;
+        height: 40px;
+        font-size: 5px;
+        line-height: 40px;
     }
     .backcard{
-        width: 70px;
-        height:70px;
-        margin-top: -70px;
+        width: 40px;
+        height:40px;
+        margin-top: -40px;
+    }
+    .toggle{
+        width: 0px;
     }
 }
-/* @media(max-width: 400px) {
+@media(min-width: 200px) {
     .frontcard{
         width: 50px;
         height: 50px;
         font-size: 20px;
-        line-height: 35px;
+        line-height: 50px;
     }
     .backcard{
         width: 50px;
         height:50px;
         margin-top: -50px;
     }
-} */
+    .toggle{
+        width: 0px;
+    }
+}
+@media(min-width: 400px) {
+    .frontcard{
+        width: 70px;
+        height: 70px;
+        font-size: 30px;
+        line-height: 70px;
+    }
+    .backcard{
+        width: 70px;
+        height:70px;
+        margin-top: -70px;
+    }
+    .toggle{
+        width: 0px;
+    }
+}
+@media(min-width: 600px) {
+    .frontcard{
+        width: 80px;
+        height: 80px;
+        font-size: 30px;
+        line-height: 80px;
+    }
+    .backcard{
+        width: 80px;
+        height:80px;
+        margin-top: -80px;
+    }
+    .toggle{
+        width: 0px;
+    }
+}
+@media(min-width: 800px) {
+    .frontcard{
+        width: 100px;
+        height: 100px;
+        font-size: 40px;
+        line-height: 100px;
+    }
+    .backcard{
+        width: 100px;
+        height: 100px;
+        margin-top: -100px;
+    }
+    .toggle{
+        width: 0px;
+    }
+}
