--- a/style/style.css
+++ b/style/style.css
@@ -78,13 +78,34 @@ main #startbtn{
     
 }
 .finish{
-    /* display: none; */
+    display: none;
     width: 100%;
     height: 100%;
     position: absolute;
     top:0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.303);
+    background-color: rgba(0, 0, 0, 0.521);
+}
+.finish div{
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    
+}
+.finish div p{
+    font-size: 100px;
+    transform: rotate(25deg);
+    color: white;
+    text-decoration: double;
+}
+.finish div button{
+    padding:0.5rem 3rem;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    background-color: #457e6b;
+    color: white;
 }
 @media(min-width: 0px){
     .frontcard{
