--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,9 @@ html{
 }
 body{
     width: 100%;
-    background-color: #5993802e;
+    background-image: url('../images/background\ \(2\).jpeg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 header{
     width: 100%;
@@ -49,11 +51,11 @@ main .container .time{
     
 }
 main #startbtn{
-    padding:1.5rem 3rem;
+    padding:1rem 3rem;
     border: none;
     outline: none;
     border-radius: 5px;
-    background-color: #a52a2a;
+    background-color: #53665a;
     color: white;
     position: absolute;
     top: 50%;
@@ -61,22 +63,27 @@ main #startbtn{
     transform: translate(-50%,-50%);
     font-size: 20px;
 }
+
 .frontcard{
+    width:100%;
+    height: 100%;
     text-align: center;
     cursor: pointer;
     background-color: white;
     border-radius:10px;
-    transition-duration: 3s;
-    transition-timing-function: linear;
 }
 .backcard{
-    z-index: 7;
-    position: absolute;
+    width: 100%;
+    height:100%;
+    margin-top: -100%;
     background-image: linear-gradient(to right,#457e6b,#599380,#65a791);
     border-radius:10px;
-    transition: width 800ms;
-    
+    transform: scale(1);
+    transition-duration: 3s;
+    transition-timing-function: linear;
+    transition: transform 800ms;
 }
+
 .finish{
     display: none;
     width: 100%;
@@ -85,6 +92,7 @@ main #startbtn{
     top:0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.521);
+    transition: display 1s;
 }
 .finish div{
     position: absolute;
@@ -107,83 +115,65 @@ main #startbtn{
     background-color: #457e6b;
     color: white;
 }
+.toggle{
+    transition-duration: 3s;
+    transition-timing-function: linear;
+    transition: transform 800ms;
+    transform: scale(0);
+}
 @media(min-width: 0px){
-    .frontcard{
+    .card{
         width: 40px;
         height: 40px;
+    }
+    .frontcard{
         font-size: 5px;
         line-height: 40px;
     }
-    .backcard{
-        width: 40px;
-        height:40px;
-        margin-top: -40px;
-    }
-    .toggle{
-        width: 0px;
-    }
 }
 @media(min-width: 200px) {
-    .frontcard{
+    .card{
         width: 50px;
-        height: 50px;
+        height: 50px;        
+    }
+    .frontcard{
         font-size: 20px;
         line-height: 50px;
     }
     .backcard{
-        width: 50px;
-        height:50px;
-        margin-top: -50px;
-    }
-    .toggle{
-        width: 0px;
+        width: 100%;
+        height:100%;
+        margin-top: -100%;
     }
 }
 @media(min-width: 400px) {
-    .frontcard{
+    .card{
         width: 70px;
-        height: 70px;
+        height: 70px;        
+    }
+    .frontcard{
         font-size: 30px;
         line-height: 70px;
     }
-    .backcard{
-        width: 70px;
-        height:70px;
-        margin-top: -70px;
-    }
-    .toggle{
-        width: 0px;
-    }
 }
 @media(min-width: 600px) {
-    .frontcard{
+    .card{
         width: 80px;
-        height: 80px;
+        height: 80px;        
+    }
+    .frontcard{
         font-size: 30px;
         line-height: 80px;
     }
-    .backcard{
-        width: 80px;
-        height:80px;
-        margin-top: -80px;
-    }
-    .toggle{
-        width: 0px;
-    }
 }
 @media(min-width: 800px) {
-    .frontcard{
+    .card{
         width: 100px;
-        height: 100px;
+        height: 100px;        
+    }
+    .frontcard{
         font-size: 40px;
         line-height: 100px;
     }
-    .backcard{
-        width: 100px;
-        height: 100px;
-        margin-top: -100px;
-    }
-    .toggle{
-        width: 0px;
-    }
+
 }
